--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql-tools": "^9.0.1",
     "graphql-upload": "^16.0.2",
     "jsdom": "^24.1.2",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.5.4",
     "next": "14.0.4",
     "next-cloudinary": "^6.13.0",
@@ -30,27 +31,27 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
-    "@types/jest": "^28.1.6",
-    "@types/mocha": "^10.0.7",
-    "dotenv": "16.0.3",
-    "dotenv-esbuild": "1.1.0",
-    "dotenv-cli": "7.2.1",
-    "dotenv-webpack": "8.0.1",
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-operations": "4.0.1",
     "@graphql-codegen/typescript-react-apollo": "4.1.0",
     "@graphql-codegen/typescript-resolvers": "2.7.10",
-    "@types/node": "^20",
+    "@types/jest": "^28.1.8",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.17.47",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "16.0.3",
+    "dotenv-cli": "7.2.1",
+    "dotenv-esbuild": "1.1.0",
+    "dotenv-webpack": "8.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^24.0.0",
     "jest-environment-jsdom-fourteen": "^1.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.3.3",
     "typescript": "^5.5.4"
   }
 }
