--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://tracemnn8:9X3Lsv2pqXo8pQPw@cluster0.ltzdoub.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NEXT_PUBLIC_MONGODB_URL=mongodb+srv://tracemnn8:9X3Lsv2pqXo8pQPw@cluster0.ltzdoub.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
