--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "generate": "graphql-codegen --config ./codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@apollo/subgraph": "^2.8.4",
     "@apollo/utils.keyvaluecache": "^3.1.0",
+    "@graphql-tools/load-files": "^7.0.1",
+    "@graphql-tools/merge": "^9.0.24",
+    "@graphql-tools/schema": "^10.0.23",
     "@types/graphql-upload": "^16.0.7",
     "apollo-server-cloud-functions": "^3.13.0",
     "cloudinary": "^2.4.0",
-    "graphql": "^16.9.0",
+    "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.1",
     "graphql-upload": "^16.0.2",
